--- a/maro_entry.html
+++ b/maro_entry.html
@@ -41,7 +41,7 @@
             database.ref('expenses/' + expenseId).set({
                 yourExpense: yourExpense
             });
-            document.getElementById('link').innerText = `Share this link with Anny: ${window.location.origin}/anny_entry.html?expenseId=${expenseId}`;
+            document.getElementById('link').innerText = `Share this link with Anny: https://shinm1994.github.io/expense-calculator/anny_entry.html?expenseId=${expenseId}`;
         }
     </script>
 </body>
