--- a/anny_entry.html
+++ b/anny_entry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Expense Split Calculator - Anny's Entry</title>
+    <title>Expense Split Calculator - BB's Entry</title>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
     <style>
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>Enter Your Expenses and Pick a Number</h1>
+    <h1>Hi bb! Enter Your Expenses and Pick a Number</h1>
     <label for="annyExpense">Your Expense:</label>
     <input type="number" id="annyExpense" /><br />
     <label for="numberPicked">Number Picked (0-10):</label>
