--- a/anny_entry.html
+++ b/anny_entry.html
@@ -23,11 +23,12 @@
         var firebaseConfig = {
             apiKey: "AIzaSyADUnObZVQ6jrw9gCUQaOV0OXVBdgTJm-E",
             authDomain: "bb-expense-calculator.firebaseapp.com",
-            databaseURL: "https://bb-expense-calculator.firebaseio.com",
+            databaseURL: "https://bb-expense-calculator-default-rtdb.firebaseio.com",
             projectId: "bb-expense-calculator",
             storageBucket: "bb-expense-calculator.appspot.com",
             messagingSenderId: "641752820262",
-            appId: "1:641752820262:web:54ac8a72acdbc62d28d4e7"
+            appId: "1:641752820262:web:54ac8a72acdbc62d28d4e7",
+            measurementId: "G-JHCF3J6X2Z"
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
