--- a/maro_entry.html
+++ b/maro_entry.html
@@ -39,6 +39,7 @@
                 return;
             }
             let expenseId = new Date().getTime(); // Use timestamp as unique ID
+            console.log("Saving expense with ID:", expenseId, " and value:", yourExpense); // Debug statement
             database.ref('expenses/' + expenseId).set({
                 yourExpense: yourExpense
             }, function(error) {
@@ -46,7 +47,7 @@
                     console.error("Error saving data:", error); // Debug statement
                     alert("Data could not be saved. " + error.message);
                 } else {
-                    console.log("Data saved successfully."); // Debug statement
+                    console.log("Data saved successfully with ID:", expenseId); // Debug statement
                     document.getElementById('link').innerText = `Share this link with Anny: https://shinm1994.github.io/expense-calculator/anny_entry.html?expenseId=${expenseId}`;
                 }
             });
