--- a/maro_entry.html
+++ b/maro_entry.html
@@ -6,15 +6,20 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
-        input, button { margin: 5px 0; transition: transform 0.2s ease-in-out; }
-        input:hover, button:hover { transform: scale(1.1); }
+        input, button { margin: 5px 0; transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; }
+        input:hover, button:hover { transform: rotate(10deg) scale(1.1); box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); }
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
         }
+        @keyframes wiggle {
+            0%, 100% { transform: rotate(-3deg); }
+            50% { transform: rotate(3deg); }
+        }
         h1, label, input, button { animation: fadeIn 2s; }
         button { background-color: #4CAF50; color: white; padding: 10px 20px; border: none; cursor: pointer; }
-        button:hover { background-color: #45a049; }
+        button:hover { background-color: #45a049; animation: wiggle 0.5s; }
+        #link { margin-top: 20px; }
     </style>
 </head>
 <body>
@@ -58,7 +63,8 @@
                     alert("Data could not be saved. " + error.message);
                 } else {
                     console.log("Data saved successfully with ID:", expenseId); // Debug statement
-                    document.getElementById('link').innerText = `Share this link with Anny: https://shinm1994.github.io/expense-calculator/anny_entry.html?expenseId=${expenseId}`;
+                    const linkElement = document.getElementById('link');
+                    linkElement.innerHTML = `Share this link with Anny: <a href="https://shinm1994.github.io/expense-calculator/anny_entry.html?expenseId=${expenseId}" target="_blank">https://shinm1994.github.io/expense-calculator/anny_entry.html?expenseId=${expenseId}</a>`;
                 }
             });
 
